--- a/plugin.ini
+++ b/plugin.ini
@@ -3,8 +3,8 @@ name="Content DM Link"
 author="Ned Henry"
 description="Adds the ability to import items from Content DM into Omeka."
 license="GPLv3"
-link=""
-support_link=""
+link="https://github.com/UCSCLibrary/CdmLink"
+support_link="https://github.com/UCSCLibrary/CdmLink/issues"
 omeka_minimum_version="2.0"
-omeka_target_version="2.3"
-version="1.3"
+omeka_target_version="2.4"
+version="1.4"
