--- a/plugin.ini
+++ b/plugin.ini
@@ -1,6 +1,6 @@
 [info]
 name="Content DM Link"
-author="Ned Henry"
+author="UC Santa Cruz University Library, Ned Henry"
 description="Adds the ability to import items from Content DM into Omeka."
 license="GPLv3"
 link="https://github.com/UCSCLibrary/CdmLink"
